Thu Mar 20 12:31:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_method_entry_get_without_cache): get rid of
	  infinite recursion at aliases in a subclass and a superclass.
	  return actually defined class for other than singleton class.
	  [ruby-core:60431] [Bug #9475]

Wed Mar 19 17:13:06 2014  Eric Wong  <e@80x24.org>

	* time.c (time_mload): freeze and preserve marshal-loaded time zone
	* test/ruby/test_time.rb: add test for GC on loaded object
	  [Bug #9652]

Tue Mar 18 23:20:12 2014  Shota Fukumori  <her@sorah.jp>

	* vm_eval.c (eval_string_with_cref): Unify to use NIL_P.

Tue Mar 18 22:03:41 2014  Shota Fukumori  <her@sorah.jp>

	* vm_eval.c (eval_string_with_cref): Use file path even if scope is
	  given. Related to [ruby-core:56099] [Bug #8662] and r42103.

Mon Mar 17 13:17:47 2014  Koichi Sasada  <ko1@atdot.net>

	* enumerator.c (enumerator_block_call): use RARRAY_CONST_PTR()
	  instead of RARRAY_PTR().

	* io.c (rb_io_s_popen): ditto.

	* numeric.c (num_step_size): ditto.

	* vm_eval.c (rb_apply): ditto.

	* vm_eval.c (rb_eval_cmd): ditto.

Mon Mar 17 10:11:59 2014  Eric Wong  <e@80x24.org>

	* variable.c (rb_const_set): delete existing entry on redefinition
	  [Bug #9645]
	* test/ruby/test_const.rb (test_redefinition): test for leak

Sun Mar 16 21:33:01 2014  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] Fix timezone in example of Time.parse [Bug #9521]
	  Based on patch by @stomar

Sun Mar 16 13:21:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): insert a space between option and its
	  argument for non-GCC compilers.  [ruby-core:61429] [Bug #9624]

Sun Mar 16 08:05:06 2014  Eric Wong  <e@80x24.org>

	* gc.c (objspace_xcalloc): fix GC accounting

Sun Mar 16 06:33:35 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): return address is just after calling
	  address. Therefore noreturn function with tail call's return
	  address may be in another function.
